--- a/templates/world_population.html
+++ b/templates/world_population.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+<meta charset="utf-8">
+<title>Highcharts Example</title>
 </head>
 <body>
-$END$
+<div id="container"></div>
+<script src="https://code.highcharts.com/highcharts.src.js"></script>
+<script>
+  Highcharts.chart('container', {
+      chart: {
+          type: 'column'
+      },
+      title: {
+          text: 'Historic World Population by Region'
+      },
+      xAxis: {
+          categories: ['Africa', 'America', 'Asia', 'Europe', 'Oceania']
+      },
+      series: [{
+          name: 'Year 1800',
+          data: [107, 31, 635, 203, 2]
+      }, {
+          name: 'Year 1900',
+          data: [133, 156, 947, 408, 6]
+      }, {
+          name: 'Year 2012',
+          data: [1052, 954, 4250, 740, 38]
+      }]
+  });
+</script>
 </body>
 </html>
